# Project-S

./: README.md
backend/: Anchor.toml  package.json
backend/programs/backend/: Cargo.toml
backend/programs/backend/src/: errors.rs  lib.rs
backend/programs/flash-loans/: Cargo.toml
backend/programs/flash-loans/src/: lib.rs
backend/programs/lending/src/: lib.rs
backend/programs/math/src/: lib.rs
backend/token-manager/: Anchor.toml
backend/token-manager/programs/token-manager/: Cargo.toml
backend/token-manager/programs/token-manager/src/: lib.rs
client/: package-lock.json  package.json
client/app/: page.tsx
client/components/: connectWallet.tsx
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: navbar.tsx  providers.tsx  token-creator.tsx
