[package]
name = "lending-protocol"
version = "0.1.0"
description = "Solana Lending Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"
